daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-daemonset
 

spec:
  selector:
    matchLabels:
      app: nginx-daemon

  template:
    metadata:
      labels:
        app: nginx-daemon

    spec:
      tolerations:
      - operator: Exists

      containers:
      - name: nginx
        image: nginx:1.25

        ports:
        - containerPort: 80
