statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-statefulset
  namespace: dev

spec:
  serviceName: nginx-headless

  replicas: 2

  selector:
    matchLabels:
      app: nginx-stateful

  template:
    metadata:
      labels:
        app: nginx-stateful

    spec:
      tolerations:
      - operator: Exists

      containers:
      - name: nginx
        image: nginx:1.25

        ports:
        - containerPort: 80

        volumeMounts:
        - name: nginx-storage
          mountPath: /usr/share/nginx/html

  volumeClaimTemplates:
  - metadata:
      name: nginx-storage

    spec:
      accessModes:
        - ReadWriteOnce

      resources:
        requests:
          storage: 1Gi
